# repak

./: .gitignore  Cargo.toml  FIXES_APPLIED.md  FPakFile.cpp  LICENSE-MIT  README.md  README_FALLENDOLL.md  README_VDENUVO.md  dist-workspace.toml  release.toml
examples/: list.rs  read.rs  unpack.rs  unpak.rs  version.rs
examples/subcommands/: list.rs  mod.rs  unpack.rs  version.rs
get_oodle/: Cargo.toml
get_oodle/src/: lib.rs
oodle_loader/: Cargo.toml
oodle_loader/src/: lib.rs
repak/: Cargo.toml
repak/src/: data.rs  denuvo.rs  denuvo_encrypt_impl.rs  encryption.rs  entry.rs  error.rs  ext.rs  fallendoll.rs  fallendoll_encrypt_addon.rs  footer.rs  lib.rs  pak.rs
repak/tests/: config.sh  test.rs  variants.rs
repak/tests/packs/: pack_v11.pak  pack_v11_compress_encrypt_encryptindex.pak  pack_v5.pak  pack_v5_compress.pak  pack_v5_compress_encrypt.pak  pack_v5_compress_encrypt_encryptindex.pak  pack_v5_encryptindex.pak  pack_v7_encrypt.pak  pack_v7_encrypt_encryptindex.pak  pack_v7_encryptindex.pak  pack_v8a_compress_encrypt.pak  pack_v8a_compress_encrypt_encryptindex.pak  pack_v8a_compress_encryptindex.pak  pack_v8a_encrypt.pak  pack_v8a_encryptindex.pak  pack_v8b.pak  pack_v8b_compress.pak  pack_v8b_compress_encrypt_encryptindex.pak  pack_v8b_compress_encryptindex.pak  pack_v8b_encryptindex.pak  pack_v9.pak  pack_v9_compress.pak  pack_v9_encrypt_encryptindex.pak  pack_v9_encryptindex.pak
repak_bind/: Cargo.toml
repak_bind/src/: alloc.rs  lib.rs
repak_cli/: Cargo.toml
repak_cli/src/: main.rs
repak_cli/tests/: cli.rs  docs.rs
repak_cli/wix/: main.wxs
repak_cs/: repak_cs.sln
repak_cs/RePak/: Class1.cs  Interop.cs  Interop2.cs  RePak.cs
repak_cs/RePak.Tests/: RePak.Tests.csproj  UnitTest1.cs
repak_rivals/: Cargo.toml
repak_rivals/src/: entry.rs  error.rs  lib.rs  pak.rs
src/: entry.rs  error.rs  ext.rs  footer.rs  index.rs  lib.rs  pak.rs  pakentry.rs  pakfile.rs  strcrc32.rs
tests/: config.example.sh  crypto.json  generate.sh  test.rs
tests/pack/root/directory/: nested.txt
tests/packs/: pack_v11_compress.pak  pack_v11_compress_encrypt.pak  pack_v11_compress_encryptindex.pak  pack_v11_encrypt.pak  pack_v11_encrypt_encryptindex.pak  pack_v11_encryptindex.pak  pack_v5_compress_encryptindex.pak  pack_v5_encrypt.pak  pack_v5_encrypt_encryptindex.pak  pack_v7.pak  pack_v7_compress.pak  pack_v7_compress_encrypt.pak  pack_v7_compress_encrypt_encryptindex.pak  pack_v7_compress_encryptindex.pak  pack_v8_compress_encrypt.pak  pack_v8_encrypt.pak  pack_v8_encrypt_encryptindex.pak  pack_v8a.pak  pack_v8a_compress.pak  pack_v8a_encrypt_encryptindex.pak  pack_v9_compress_encrypt.pak  pack_v9_compress_encrypt_encryptindex.pak  pack_v9_compress_encryptindex.pak  pack_v9_encrypt.pak
unpak_cli/: Cargo.toml
unpak_cli/src/: main.rs
