[package]
name = "unpak"
authors = ["spuds"]
repository = "https://github.com/bananaturtlesandwich/unpak"
description = "a no-nonsense unreal pak parsing crate"
license = "MIT OR Apache-2.0"
keywords = ["modding", "parsing", "compression"]
categories = ["filesystem", "parser-implementations"]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
strum = { version = "0.24", features = ["derive"] }
aes = "0.8"
flate2 = "1.0"
hashbrown = "0.13"
thiserror = "1.0"
sha1 = "0.10.5"

[dev-dependencies]
base64 = "0.21.0"
paste = "1.0.11"
