[workspace]
resolver = "2"
members = ["repak", "repak_bind", "repak_cli"]

[workspace.package]
repository = "https://github.com/trumank/repak"
authors = ["spuds", "trumank"]
license = "MIT OR Apache-2.0"
version = "0.2.1"
edition = "2021"
keywords = ["unreal-engine", "pak", "unrealpak"]

[workspace.dependencies]
aes = "0.8.4"
base64 = "0.22.1"
strum = { version = "0.26", features = ["derive"] }
sha1 = "0.10"
hex = "0.4"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.7.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
