[package]
name = "repak"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true

[features]
default = ["compression", "encryption"]
compression = ["dep:flate2", "dep:zstd", "dep:lz4_flex"]
oodle = []
oodle_loader = ["dep:oodle_loader"]
oodle_explicit = ["oodle"]
oodle_implicit_dynamic = ["dep:oodle_loader", "oodle"]
encryption = ["dep:aes"]

[dependencies]
byteorder = "1.5"
aes = { workspace = true, optional = true }
flate2 = { version = "1.0", optional = true }
zstd = { version = "0.13", optional = true }
oodle_loader = { path = "../oodle_loader", optional = true}
thiserror = "1.0"
sha1 = { workspace = true }
strum = { workspace = true }
lz4_flex = { version = "0.11.3", optional = true }

[dev-dependencies]
base64 = { workspace = true }
paste = "1.0.15"
