[package]
name = "repak"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true

[features]
default = ["compression", "encryption"]
compression = ["dep:flate2", "dep:zstd", "dep:lz4_flex"]
oodle = ["dep:oodle_loader", "compression"]
encryption = ["dep:aes"]

[dependencies]
byteorder = "1.5"
aes = { workspace = true, optional = true }
flate2 = { version = "1.1", optional = true }
zstd = { version = "0.13", optional = true }
lz4_flex = { version = "0.12.0", optional = true }
oodle_loader = { path = "../oodle_loader", optional = true}
thiserror = "2.0"
sha1 = { workspace = true }
strum = { workspace = true }
hex.workspace = true

[dev-dependencies]
base64 = { workspace = true }
paste = "1.0.15"
