[package]
name = "repak_cli"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[[bin]]
name = "repak"
path = "src/main.rs"

[dependencies]
get_oodle = { path = "../get_oodle" }
repak = { path = "../repak", features = ["oodle"] }
aes = { workspace = true }
base64 = { workspace = true }
clap = { version = "4.1.4", features = ["derive"] }
hex = { workspace = true }
indicatif = { version = "0.17.3", features = ["rayon"] }
path-clean = "0.1.0"
path-slash = "0.2.1"
rayon = "1.6.1"
sha2 = "0.10.7"
strum = { workspace = true }
