[package]
name = "repak_cli"
description = "Utility for building/extracting/inspecting Unreal Engine .pak files"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[package.metadata.wix]
upgrade-guid = "723E95D8-E87B-46BC-AD3B-C128583967CF"
path-guid = "F58A5112-1B44-49DA-8772-4E68F01E4AB7"
license = false
eula = false

[[bin]]
name = "repak"
path = "src/main.rs"

[features]
default = ["oodle"]
oodle = ["repak/oodle_implicit_dynamic"]

[dependencies]
repak = { path = "../repak" }
aes = { workspace = true }
base64 = { workspace = true }
clap = { version = "4.1.4", features = ["derive"] }
hex = { workspace = true }
indicatif = { version = "0.17.3", features = ["rayon"] }
path-clean = "0.1.0"
path-slash = "0.2.1"
rayon = "1.6.1"
sha2 = "0.10.7"
strum = { workspace = true }
itertools = "0.12.0"

[dev-dependencies]
assert_cmd = "2.0.12"
