[package]
name = "repak_cli"
description = "Utility for building/extracting/inspecting Unreal Engine .pak files"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[package.metadata.wix]
upgrade-guid = "723E95D8-E87B-46BC-AD3B-C128583967CF"
path-guid = "F58A5112-1B44-49DA-8772-4E68F01E4AB7"
license = false
eula = false

[[bin]]
name = "repak"
path = "src/main.rs"

[features]
default = ["oodle"]
oodle = ["repak/oodle_implicit_dynamic"]

[dependencies]
repak = { path = "../repak" }
aes = { workspace = true }
base64 = { workspace = true }
clap = { version = "4.5.26", features = ["derive"] }
hex = { workspace = true }
indicatif = { version = "0.17.9", features = ["rayon"] }
path-clean = "1.0.1"
path-slash = "0.2.1"
rayon = "1.10.0"
sha2 = "0.10.8"
strum = { workspace = true }
itertools = "0.14.0"
glob = "0.3.2"

[dev-dependencies]
assert_cmd = "2.0.16"
dir-diff = "0.3.3"
indoc = "2.0.5"
tempfile = "3.15.0"
